# Spamblaster9000

./: Cargo.toml  README.md
examples/: example.com.json
src/: main.rs
src/lib/: config.rs  mod.rs
src/lib/requester/: mod.rs  request_executor.rs
src/lib/requester/target_types/: discord.rs  generic.rs  mod.rs  telegram.rs
