[package]
name = "spamblaster9000"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "socks"] }
tokio = {version = "1.47.1", features = ["full"]}
rand = "0.10.0-rc.0"
clap = { version = "4.5.48", features = ["derive"] }
serde = {version = "1.0.228", features = ["default"]}
serde_json = "1.0.145"
